--- a/timezone/templates/cart/checkout.html
+++ b/timezone/templates/cart/checkout.html
@@ -214,6 +214,11 @@
                         <a href="#" id="remove_coupon_btn" style="color: red; text-decoration: underline;">Remove coupon</a>
 
                     </li>
+                    <li>
+                      <a href="#">Discount amount
+                        <span>{{discounted_amount}}</span>
+                      </a>
+                    </li>
                     
                     {% endif %}
                   <li>
