--- a/timezone/templates/orders/download_invoice.html
+++ b/timezone/templates/orders/download_invoice.html
@@ -116,7 +116,7 @@
                     {% for item in order_item %}
                     <tr>
                         <td>{{item.product.product.name}}</td>
-                        <td>{{item.product.product.price}}</td>
+                        <td>{{item.price}}</td>
                         <td>{{item.quantity}}</td>
                         <td>{{item.total_price}}</td>
                     </tr>
