--- a/timezone/templates/orders/order_details.html
+++ b/timezone/templates/orders/order_details.html
@@ -49,6 +49,19 @@
       </div>
     </div>
   
+
+    <div class="card mb-4">
+      <div class="card-body">
+        <h5 class="card-title">Shipping Address</h5>
+        <p><strong>Name:</strong> {{ address.first_name }}</p>
+        <p><strong>Address Line 1:</strong> {{ address.address_line_1 }}</p>
+        <p><strong>Address Line 2:</strong> {{ address.address_line_2 }}</p>
+        <p><strong>City:</strong> {{ address.town_city }}</p>
+        <p><strong>Zip Code:</strong> {{ address.postcode_zip }}</p>
+        <p><strong>Country:</strong> {{ address.country }}</p>
+        <p><strong>Phone:</strong> {{ address.phone_number }}</p>
+      </div>
+    </div>
   
   
   
