--- a/timezone/templates/base/user_base.html
+++ b/timezone/templates/base/user_base.html
@@ -46,7 +46,7 @@
                     <div class="menu-wrapper">
                         <!-- Logo -->
                         <div class="logo">
-                            <a href="index.html"><img src="{% static 'assets/img/logo/logo.png' %}" alt=""></a>
+                            <a href="{% url 'login:home' %}"><img src="{% static 'assets/img/logo/logo.png' %}" alt=""></a>
                         </div>
                         <!-- Main-menu -->
                         <div class="main-menu d-none d-lg-block">
