--- a/timezone/templates/login/index.html
+++ b/timezone/templates/login/index.html
@@ -74,7 +74,7 @@
                             </div>
                             <div class="product-caption">
                                 <h3><a href="{% url 'products:single_product' i.id %}">{{i.product.name}}</a></h3>
-                                <span>{{i.product.price}}</span>
+                                <span>{{i.product.price}}Rs</span>
                             </div>
                         </div>
                     </div>
@@ -143,7 +143,7 @@
                             
                             <div class="popular-caption">
                                 <h3><a href="{% url 'products:single_product' i.id %}">{{i.product.name}}</a></h3>
-                                <span>{{i.product.price}}</span>
+                                <span>{{i.product.price}}Rs</span>
                             </div>
                             </div> 
                             </div>
